@@ -608,7 +608,7 @@ scan_dyntag (const int desired_dyntag, bfd *abfd, CORE_ADDR *ptr,
   if (sect == NULL)
     return 0;
 
-  for (const auto &iter : *current_target_sections)
+  for (const auto &iter : current_program_space->target_sections)
     if (sect == iter.the_bfd_section)
       {
 	target_section = &iter;
